# chatbot_lai

./: 2_limpeza_normalizacao.py  3_preprocess_spacy.py  4_pos_processamento_ner.py  5_busca_semantica.py  6_geracao_respostas_llm.py  ARTIGO_CIENTIFICO_GUIDE.md  AUDIO_FEATURES.md  DEPLOY_GUIDE.md  README.md  app.py  app_original.py  diagram_fluxo_chatbot.mmd  entidades_corrigidas.csv  entidades_ner.txt  lei_acesso_informacao_limpa.txt  lei_acesso_informacao_normalizada.txt  render.yaml  requirements.txt  sentencas.txt  tokens_filtrados.txt
backend/: pyproject.toml
chat/: 1_coleta_e_limpeza.py  2_limpeza_normalizacao.py  entidades_filtradas.txt  entidades_ner.txt  tokens_filtrados.txt
data/metrics/: melhorias_com_entidades.csv  metricas_por_categoria.csv  metricas_versao_completa.json  metricas_versao_completa_enriquecida.json  metricas_versao_completa_enriquecida_otimizada.json  metricas_versao_otimizada.json  metricas_versao_otimizada_enriquecida_refinada.json  resultados_avaliacao_completa.csv  resultados_avaliacao_completa_enriquecida.csv  resultados_avaliacao_completa_enriquecida_otimizada.csv  resultados_avaliacao_otimizada.csv  resultados_avaliacao_otimizada_enriquecida_refinada.csv  resultados_categorizados.csv  resultados_comparativos.csv
docs/: ARTIGO_CIENTIFICO_GUIDE.md  AUDIO_FEATURES.md  BRANCHES_INFO.md  INTERFACE_README.md
scripts/: 1_coleta_e_limpeza.py  2_limpeza_normalizacao.py  3_preprocess_spacy.py  4_pos_processamento_ner.py  5_busca_semantica.py  6_geracao_respostas_llm.py
templates/: index.html  index_backup.html  index_local.html
(+4 files in other folders)
