[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Wellington Menezes", email = "ligton.ribeiro@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
